<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/containerEtLoginEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/defaultColorHint"
                app:layout_constraintBottom_toTopOf="@+id/containerEtLoginSenha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="teste@teste.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/containerEtLoginSenha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/defaultColorHint"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toTopOf="@+id/btnLoginLogar"
                app:layout_constraintEnd_toEndOf="@+id/containerEtLoginEmail"
                app:layout_constraintStart_toStartOf="@+id/containerEtLoginEmail"
                app:layout_constraintTop_toBottomOf="@+id/containerEtLoginEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_senha"
                    android:inputType="numberPassword"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="teste@teste.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnLoginLogar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/logar"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/btnLoginCadastrar"
                app:layout_constraintEnd_toEndOf="@+id/containerEtLoginSenha"
                app:layout_constraintStart_toStartOf="@+id/containerEtLoginSenha"
                app:layout_constraintTop_toBottomOf="@+id/containerEtLoginSenha" />

            <Button
                android:id="@+id/btnLoginCadastrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="12dp"
                android:text="@string/cadastrar"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/btnLoginLogar"
                app:layout_constraintStart_toStartOf="@+id/btnLoginLogar"
                app:layout_constraintTop_toBottomOf="@+id/btnLoginLogar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.core.widget.NestedScrollView>
