<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/containerEtEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/defaultColorHint"
                app:layout_constraintBottom_toTopOf="@+id/containerEtSenha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="teste@teste.com" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/containerEtSenha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/defaultColorHint"
                app:layout_constraintBottom_toTopOf="@+id/containerEtConfirmaSenha"
                app:layout_constraintEnd_toEndOf="@+id/containerEtEmail"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/containerEtEmail"
                app:layout_constraintTop_toBottomOf="@+id/containerEtEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_senha"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="123456" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/containerEtConfirmaSenha"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/defaultColorHint"
                app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
                app:layout_constraintEnd_toEndOf="@+id/containerEtSenha"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/containerEtSenha"
                app:layout_constraintTop_toBottomOf="@+id/containerEtSenha">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etConfirmaSenha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirma_senha"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="123456" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="12dp"
                android:text="@string/cadastrar"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/containerEtConfirmaSenha"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/containerEtConfirmaSenha"
                app:layout_constraintTop_toBottomOf="@+id/containerEtConfirmaSenha" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.core.widget.NestedScrollView>
